# InnoUni_OSCourse_labs

./: CMakeLists.txt  README.md
week01/: ex1.sh  ex1.txt  ex2.sh  file.txt
week01/examples/example1/: example1.sh  namelist.sorted
week01/examples/example2/: errors.txt  output.txt
week01/home_dir/: home.txt
week02/: ex1.c  ex1.sh  ex2.c  ex2.sh  ex3.c  ex4.c  ex4.sh  ex5.c  ex5.sh
week03/: ex1.c  ex2.c  ex2.sh  ex3.c  ex3.sh  ex4.c
week04/: ex1.c  ex2.c  ex3.c  ex3.sh  ex3.txt  ex4.c  temp.txt
week05/: channel.c  ex1.sh  ex2.c  ex2.sh  ex3.c  ex3.explanation.txt  ex3.sh  ex3.txt  ex4.c  ex4.explanation.txt  ex4.sh  ex4.txt  publisher.c  subscriber.c
week06/: ex1.c  ex1.sh  ex2.c  ex2.sh  ex2.txt  ex3.c  ex3.txt
week07/: ex1.txt  ex2.c  ex3.c  ex4.c  ex5.c
week08/: ex1.sh  ex1.txt  ex2.c  ex2.sh  ex3.sh  ex4.c  ex5.txt  ex6.txt
week09/: ex1.c  ex1.sh  ex2.txt
week1/: ex1.sh  ex2.sh  ex2.txt  ex3.sh  ex4
week1/examples/example1/: namelist
week1/examples/example2/: example2.sh
week1/root_dir/: root.txt
week10/: _ex1_2.txt  _ex3.txt  ex1.sh  ex1.txt  ex2.sh  ex3.sh  ex3.txt  ex4.c  ex4.sh  ex4.txt
week11/: ex1.sh  ex2.c  ex2.sh  ex2.txt
